[package]
name = "hextorgb"
version = "0.5.0"
edition = "2021"

[lib]
name = "hextorgb"
path = "src/lib.rs"

[[bin]]
name = "hextorgb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
colored = "3.0.0"

[profile.release]
lto = true
codegen-units = 1          # Better optimization, slower compile
panic = "abort"            # Smaller binary size
strip = true              # Remove debug symbols
opt-level = 3   