[package]
name = "hextorgb"
version = "0.6.0"
edition = "2021"

[lib]
name = "hextorgb"
path = "src/lib.rs"

[[bin]]
name = "hextorgb"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
# Library-only dependencies (always included)
# None needed for core hex parsing

# Binary-only dependencies (optional)
clap = { version = "4.5.43", features = ["derive"], optional = true }
colored = { version = "3.0.0", optional = true }

[features]
default = []
cli = ["dep:clap", "dep:colored"]  # Enable CLI dependencies

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3